launch day, still a few minor updates needed such as instagram, maybe add facebook, animations, and fix affix on smaller screens so it doesnt jump.

--- a/css/lg.css
+++ b/css/lg.css
@@ -474,12 +474,10 @@ select.form-control{
 	width: 100%;
 	height: 100%;
 }
-.swiper-button-next, .swiper-button-prev{
-}
 .gallery-bg{
 	background-color:#F8F1FA;
 	position:relative;
-	padding-bottom:660px;
+	padding-bottom:690px;
 }
 .gallery-bg h1{
 	color:#33B89B;
@@ -505,10 +503,11 @@ select.form-control{
 .insta-wrap{
 	background-color:#ffffff;
 	position:absolute;
-	z-index:8888;
+	z-index:99;
 	bottom:10px;
-	height:620px;
+	height:650px;
 	margin-bottom:100px;
+	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 h3.tweet-text{
 	color:#33B89B;
@@ -537,7 +536,7 @@ h3.insta-text{
 	text-shadow: 1px 1px 1px #000000;
 }
 .social-link{
-	margin:0 0 0 68px;
+	margin:20px 33%;
 	display:block;
 	overflow:hidden;
 	list-style:none;
@@ -642,4 +641,7 @@ h3.insta-text{
 	transition:all 0.5s ease-in-out;
 	-moz-transition:all 0.5s ease-in-out;
 	-webkit-transition:all 0.5s ease-in-out;
+}
+.to-top{
+	z-index: 9999 !important;
 }
