--- a/css/xs.css
+++ b/css/xs.css
@@ -1,3 +1,6 @@
+/* Responsive for screen up to 765px */
+
+
 /* NAV CSS //////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////// */
 
 .navbar{
@@ -18,32 +21,6 @@
 div.navbar-collapse.collapse.in{
 	background-color:#C1B3C4;
 }
-/*Change bootstrap navbar collapse breakpoint from 768px
-
-.navbar-header {
-	float: none;
-}
-.navbar-toggle {
-	display: block;
-}
-.navbar-collapse {
-	border-top: 1px solid transparent;
-	box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
-}
-.navbar-collapse.collapse {
-	display: none!important;
-}
-.navbar-nav {
-	float: none!important;
-	margin: 7.5px -15px;
-}
-.navbar-nav>li {
-	float: none;
-}
-.navbar-nav>li>a {
-	padding-top: 10px;
-	padding-bottom: 10px;
-}*/
 
 /* HERO CSS /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////// */
 
@@ -52,6 +29,22 @@ div.navbar-collapse.collapse.in{
 }
 .hero-bg h1{
 	padding:200px 0 0;
+}
+
+/* COUNTDOWN CSS /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////// */
+
+.countdown-bg{
+	font-size:2.5em;
+	padding:0 4%;
+}
+
+/* VENUE CSS ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////// */
+
+.resort-bg{
+	background-attachment:scroll;
+}
+.resort-bg h1{
+	padding:50px 0;
 }
 
 /* FYI CSS //////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////// */
@@ -67,6 +60,7 @@ div.navbar-collapse.collapse.in{
 }
 .fyi-wrap h1{
 	padding-bottom:50px;
+	font-size:2.5em;
 }
 .fyi-text p{
 	margin:2%;
@@ -74,12 +68,6 @@ div.navbar-collapse.collapse.in{
 }
 .fyi-promo{
 	padding:0;
-}
-
-/* VENUE CSS ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////// */
-
-.resort-bg{
-	background-attachment:scroll;
 }
 
 /* SQUAD CSS ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////// */
@@ -153,10 +141,10 @@ display:block;
 /* GALLERY CSS //////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////// */
 
 .gallery-bg{
-	padding-bottom:1050px;
+	padding-bottom:1150px;
 }
 .insta-wrap{
-	height:1020px;
+	height:1100px;
 }
 .gallery-bg h2{
 	padding:0;
@@ -172,4 +160,7 @@ display:block;
 }
 .insta-lg{
 	display:none;
+}
+.social-link{
+	margin:20px 25%;
 }
